--- a/src/app/components/landing/pick-services/pick-services.component.html
+++ b/src/app/components/landing/pick-services/pick-services.component.html
@@ -6,19 +6,19 @@
           <span class="material-icons text-secondary text-5xl mb-4">directions_walk</span>
           <h4 class="text-xl font-bold mb-2 text-text-light dark:text-text-dark">Paseo VIP</h4>
           <p class="text-gray-600 dark:text-gray-300 mb-2">Una caminata extendida por el parque con seguimiento GPS.</p>
-          <p class="text-lg font-semibold text-secondary">$15.00</p>
+          <p class="text-lg font-semibold text-secondary">Q15.00</p>
         </div>
         <div class="bg-card-light dark:bg-card-dark p-6 rounded-lg shadow-md text-center flex flex-col items-center">
           <span class="material-icons text-secondary text-5xl mb-4">spa</span>
           <h4 class="text-xl font-bold mb-2 text-text-light dark:text-text-dark">Cuidado y Bienestar</h4>
           <p class="text-gray-600 dark:text-gray-300 mb-2">Baño, masajes, corte de pelo y uñas para que luzca impecable.</p>
-          <p class="text-lg font-semibold text-secondary">$45.00</p>
+          <p class="text-lg font-semibold text-secondary">Q45.00</p>
         </div>
         <div class="bg-card-light dark:bg-card-dark p-6 rounded-lg shadow-md text-center flex flex-col items-center">
           <span class="material-icons text-secondary text-5xl mb-4">medical_services</span>
           <h4 class="text-xl font-bold mb-2 text-text-light dark:text-text-dark">Cuidado Veterinario</h4>
           <p class="text-gray-600 dark:text-gray-300 mb-2">Revisión general y administración de medicamentos.</p>
-          <p class="text-lg font-semibold text-secondary">$30.00</p>
+          <p class="text-lg font-semibold text-secondary">Q30.00</p>
         </div>
       </div>
     </div>
