--- a/src/app/components/landing/navbar/navbar.component.html
+++ b/src/app/components/landing/navbar/navbar.component.html
@@ -5,7 +5,7 @@
         <span class="text-xl font-bold text-text-light dark:text-text-dark">Hotel Pet</span>
       </div>
       <div class="flex items-center space-x-4">
-        <a (click)="goToLogin()" class="text-sm text-gray-600 dark:text-gray-300 hover:text-primary cursor-pointer">Acceso Clientes</a>
+        <a (click)="goToLogin()" class="text-sm text-gray-600 dark:text-gray-300 hover:text-primary cursor-pointer">Acceso</a>
         <a (click)="goToReservation()" class="bg-primary text-white font-bold py-2 px-4 rounded-lg shadow-lg hover:bg-amber-600 transition duration-300 cursor-pointer">Reservar Ahora</a>
       </div>
     </div>
