--- a/src/app/components/service-process/available-rooms/available-rooms.component.html
+++ b/src/app/components/service-process/available-rooms/available-rooms.component.html
@@ -69,7 +69,7 @@
             <div class="flex flex-col gap-1">
               <p class="text-[#0d171b] text-base font-bold leading-tight">{{ room.type }} - Habitación {{ room.number }}</p>
               <p class="text-[#4c809a] text-sm font-normal leading-normal">{{ room.description || 'Habitación cómoda y acogedora para tu mascota.' }}</p>
-              <p class="text-[#0d171b] text-lg font-bold leading-tight">${{ room.price | number:'1.2-2' }} por noche</p>
+              <p class="text-[#0d171b] text-lg font-bold leading-tight">Q{{ room.price | number:'1.2-2' }} por noche</p>
             </div>
             <button
               class="flex min-w-[84px] max-w-[480px] cursor-pointer items-center justify-center overflow-hidden rounded-lg h-8 px-4 flex-row-reverse bg-[#e7eff3] text-[#0d171b] text-sm font-medium leading-normal w-fit hover:bg-[#d1e7f0] transition-colors"
