feat: actualizar contenido y traducciones en componentes de habitaciones
- Se reemplazaron las imágenes de las habitaciones en el componente pick-room con nuevas URLs.
- Se tradujeron textos en el componente seleccion-habitacion al español para mejorar la accesibilidad.
- Se actualizó la imagen de fondo en el componente available-rooms para reflejar un nuevo diseño visual.

--- a/src/app/components/landing/pick-room/pick-room.component.html
+++ b/src/app/components/landing/pick-room/pick-room.component.html
@@ -3,7 +3,7 @@
       <h2 class="text-3xl md:text-4xl font-bold text-center mb-12 text-text-light dark:text-text-dark">Nuestras Habitaciones: Elija el Lujo que se Merece</h2>
       <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
         <div class="bg-background-light dark:bg-background-dark rounded-lg shadow-lg overflow-hidden transform hover:-translate-y-2 transition duration-300">
-          <img alt="Habitación suite para perros" class="w-full h-56 object-cover" src="https://lh3.googleusercontent.com/aida-public/AB6AXuAsX_JmTt5HF8qKMnJ1WbExnlmrh4rYV_YhEDRxpxUsZtDfo266gSgZTSBlOfb5lLJVqv-RQdzMzF8nHkaqY7d_FQK3ixvpWNhayZXPFfqFmPcvQoNsF-zO23YImbj56Vu8qm8ZL-el9eIFghUub0ak0KLHsBMmwdrE1vQpAQvjcEXQtAkRMHEDevTe7Hvs-cuh80pke-IXF2r32YsAppGl-DqpZTGkymQHkg27BXNaZf3noWmFa89D0NrAu6pRctnCSNrzE98BTZrQ"/>
+          <img alt="Habitación suite para perros" class="w-full h-56 object-cover" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRY8PJWp-9nn6EDVW8l65Q1sSbLzSdTlkN6nA&s"/>
           <div class="p-6">
             <h3 class="text-2xl font-bold mb-2 text-text-light dark:text-text-dark">Habitacion Junior</h3>
             <p class="text-lg font-semibold text-primary mb-2">Q50.00 / noche</p>
@@ -12,7 +12,7 @@
           </div>
         </div>
         <div class="bg-background-light dark:bg-background-dark rounded-lg shadow-lg overflow-hidden transform hover:-translate-y-2 transition duration-300">
-          <img alt="Suite de lujo para gatos" class="w-full h-56 object-cover" src="https://lh3.googleusercontent.com/aida-public/AB6AXuBD1TK0aSu_6ZTp_flcPkUDNvEahbap6lUAnLcI9V4fUNLsCKUVaLm1vjwCjtwy7aZN6gTLaj2Dt4JqVvdv3HwK_9yr6DslFamOIeZUgQbAfgWbCk_cfpo7WJ-XSx0-awwhVJpI766cTGsOrOk7Og9MpJG2zjEx-hIEtAwaVWxnt7rT4HGxGePhEk0xKb5VO3uVW4PzrJggfmE5UjuyEMmfKPHOZ_pajuWyA052PFfm7-4ELtIjIguXuFTx7SVLFXCHXllBee8E51Ap"/>
+          <img alt="Suite de lujo para gatos" class="w-full h-56 object-cover" src="https://i.pinimg.com/736x/64/68/2a/64682a44e5269efa02a7c8e4787a7466.jpg"/>
           <div class="p-6">
             <h3 class="text-2xl font-bold mb-2 text-text-light dark:text-text-dark">Suite Deluxe</h3>
             <p class="text-lg font-semibold text-primary mb-2">Q65.00 / noche</p>
@@ -21,7 +21,7 @@
           </div>
         </div>
         <div class="bg-background-light dark:bg-background-dark rounded-lg shadow-lg overflow-hidden transform hover:-translate-y-2 transition duration-300">
-          <img alt="Suite Presidencial para mascotas" class="w-full h-56 object-cover" src="https://lh3.googleusercontent.com/aida-public/AB6AXuBbI9yw0aecgqFMlstAjbGhBRXxatpyDbmm1A2s7X1nzeM0NaChAi8lC8lGelqOXN3U7c0wT-CLRG6K_9i9Dh1sQoc5pxR-hbWkV3RFuP0KoqjqVXSTznZ0sTGaAC3ujFCDUJiBfmIoGRC5gRPAesC7mwifEZhoEzwPeEEXVy0GBxDGvjmoQpp-TgRUQyNIrL-v98wJftldtpLHyK6L1KT7tibG4KSsxljTz95AshPcsNquwE-QB43FV7F45JoExV0INuaRMTQDGO_u"/>
+          <img alt="Suite Presidencial para mascotas" class="w-full h-56 object-cover" src="https://lalur.com.mx/images/nota_141_8.jpg"/>
           <div class="p-6">
             <h3 class="text-2xl font-bold mb-2 text-text-light dark:text-text-dark">Suite Presidencial</h3>
             <p class="text-lg font-semibold text-primary mb-2">Q95.00 / noche</p>
