--- a/src/app/components/service-process/available-rooms/available-rooms.component.html
+++ b/src/app/components/service-process/available-rooms/available-rooms.component.html
@@ -80,7 +80,7 @@
           </div>
           <div
             class="w-full bg-center bg-no-repeat aspect-video bg-cover rounded-lg flex-1"
-            [style.background-image]="'url(' + (room.imageUrl || 'https://lh3.googleusercontent.com/aida-public/AB6AXuA31OFeIzJWudfJJ_o6CKCAURY8coUMMMZpy3yepvgwiKKNcy06M7kVpOKTVkysi9ErFueYPOPdvpk5TpJUx41XPaATBE9klcnb4Oi3wLXyFe4JBaxFR2aKNURR-K1PUQygBPonXn9F1G6zPp_j5khht2renxZ_0G6iqQ0iC-uKH1q4FAjQeZFmOp2TG1kqQ0w-Dmq_eiQTpgkdbkuWx1_0IWJbJMvd5i8bWIGsLfcScU50kpz0cZhA8W0El2B4ND96ke_KB4SiWO_E') + ')'"
+            [style.background-image]="'url(' + (room.imageUrl || 'https://i.pinimg.com/736x/93/3c/af/933caf5405b543458115786a35686731.jpg') + ')'"
           ></div>
         </div>
       </div>
